monitoring/apps/observability/tempo/compactor.yaml
# tempo/compactor.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tempo-compactor
spec:
  replicas: 1
  serviceName: tempo-compactor
  selector:
    matchLabels:
      app: tempo
      component: compactor
  template:
    metadata:
      labels:
        app: tempo
        component: compactor
    spec:
      containers:
      - name: tempo
        image: grafana/tempo:2.7.2
        imagePullPolicy: IfNotPresent
        args:
        - -target=compactor
        - -config.file=/etc/tempo/merged-tempo.yaml
        - -config.expand-env=true
        ports:
        - containerPort: 3200
          name: http
        - containerPort: 9095
          name: grpc
        volumeMounts:
          - name: merged-config
            mountPath: /etc/tempo
      
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
        - name: lgtm-s3-secrets
          secret:
            secretName: lgtm-s3-secret
        - name: tempo-secrets
          secret:
            secretName: tempo-secret
        - name: merged-config
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tempo-compactor
spec:
  ports:
  - port: 3200
    name: http
  selector:
    app: tempo
    component: compactor
